# data-integration-agent

./: .env  app.py  app1.py  list_models.py  pyproject.toml  requirements.txt
app/: main.py
core/: database.py
models/: gemini_model.py
services/: json_conversion_service.py
